# Qronk

./: README.md  TODO.md  contributors.txt
documents/: dependencies.md  setup.md  ubuntu_mac.md  ubuntu_windows.md  vmssh.md
notebooks/: kinematics.ipynb
qronk_bringup/: CMakeLists.txt  package.xml
qronk_bringup/launch/: qronk_gazebo.launch.xml
qronk_bringup/rviz/: urdf_config.rviz
qronk_bringup/worlds/: test_world.world
qronk_control/: package.xml  setup.cfg  setup.py
qronk_control/launch/: test_control.launch.xml
qronk_control/qronk_control/: gait_sequences.py  kinematics.py  planned_gait.py  walk_planned.py
qronk_description/: CMakeLists.txt  package.xml
qronk_description/launch/: display.launch.xml  mockup.launch.xml  test_state_echo.launch.xml
qronk_description/meshes/: battery.stl  body_FR.stl  chassis.stl  lower_leg.stl  lower_leg_BL.stl  lower_leg_BR.stl  lower_leg_FL.stl  lower_leg_FR.stl  raspberry_pi.stl  servo.stl  shoulder.stl  shoulder_BL.stl  shoulder_BR.stl  shoulder_FL.stl  upper_leg.stl  upper_leg_BL.stl  upper_leg_FR.stl
qronk_description/rviz/: urdf_config.rviz
qronk_gazebo/: CMakeLists.txt  package.xml
qronk_interfaces/: CMakeLists.txt  package.xml
qronk_motors/: package.xml  setup.cfg  setup.py
qronk_pybullet/: package.xml  qronk_PB_Usage.md  qronk_pybullet.py  setup.cfg  setup.py
qronk_pybullet/launch/: pybullet_launch.py
qronk_pybullet/qronk_pybullet/: Plot_gait.py  plot_gait_patterns.py  qronk_pybullet.py  qronk_walks.py  qronk_walks_new.py
qronk_pybullet_OLD/: qronk.urdf  qronk_pybullet.py
(+30 files in other folders)
