<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qronk_pybullet</name>
  <version>0.0.0</version>
  <description>qronk_pybullet package</description>
  <maintainer email="63052069+16cra40@users.noreply.github.com">zakcw</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>pybullet</exec_depend>
  <exec_depend>pybullet_data</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>os</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
